--- a/pom.xml
+++ b/pom.xml
@@ -10,4 +10,11 @@
         <maven.compiler.release>24</maven.compiler.release>
         <exec.mainClass>com.mycompany.projetinfo2.ProjetInfo2</exec.mainClass>
     </properties>
+    <dependencies>
+    <dependency>
+        <groupId>org.xerial</groupId>
+        <artifactId>sqlite-jdbc</artifactId>
+        <version>3.49.1.0</version> <!-- tu peux mettre une autre version si besoin -->
+    </dependency>
+</dependencies>
 </project>
